--- a/package.json
+++ b/package.json
@@ -29,27 +29,27 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "request": "^2.88.2",
-        "webpack": "^4.35.3",
-        "webpack-cli": "^3.3.5",
-        "workbox-webpack-plugin": "^5.1.3"
+        "webpack": "^4.46.0",
+        "webpack-cli": "^3.3.12"
     },
     "devDependencies": {
-        "@babel/core": "^7.10.5",
+        "@babel/core": "^7.14.5",
         "@babel/plugin-transform-runtime": "^7.11.0",
-        "@babel/preset-env": "^7.10.4",
-        "babel-loader": "^8.1.0",
+        "@babel/preset-env": "^7.14.5",
+        "babel-loader": "^8.2.2",
         "clean-webpack-plugin": "^3.0.0",
-        "css-loader": "^4.1.1",
+        "css-loader": "^4.3.0",
         "file-loader": "^6.0.0",
         "html-webpack-plugin": "^3.2.0",
-        "jest": "^26.4.0",
+        "jest": "^26.6.3",
         "mini-css-extract-plugin": "^0.9.0",
         "node-sass": "^4.14.1",
-        "optimize-css-assets-webpack-plugin": "^5.0.3",
-        "sass-loader": "^9.0.2",
-        "style-loader": "^1.2.1",
+        "optimize-css-assets-webpack-plugin": "^5.0.6",
+        "sass-loader": "^9.0.3",
+        "style-loader": "^1.3.0",
         "supertest": "^4.0.2",
         "terser-webpack-plugin": "^3.1.0",
-        "webpack-dev-server": "^3.11.0"
+        "webpack-dev-server": "^3.11.2",
+        "workbox-webpack-plugin": "^6.1.5"
     }
 }
