--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@babel/polyfill": "^7.10.4",
         "@babel/runtime": "^7.11.2",
         "axios": "^0.19.2",
+        "body-parse": "^0.1.0",
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
         "dotenv": "^8.6.0",
